--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app",
+    "start": "set NODE_ENV=production && node app",
     "watch": "nodemon app"
   },
   "dependencies": {
