Optimised site navigation Fixed font sizes

--- a/administration/public/manifest.json
+++ b/administration/public/manifest.json
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     },
     {
-      "src": "favicon.ico",
+      "src": "favicon.jpg",
       "sizes": "80x71",
       "type": "image/jpeg"
     }
