--- a/administration/package.json
+++ b/administration/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://administration.hercogit.webfactional.com",
+  "homepage": "https://admin.matura.pmgkk.com/",
   "dependencies": {
     "alt": "^0.18.6",
     "history": "^4.7.2",
