--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://hercogit.webfactional.com/",
+  "homepage": "https://matura.pmgkk.com/",
   "dependencies": {
     "alt": "^0.18.6",
     "jquery": "^3.3.1",
