--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://matura.pmgkk.com/",
+  "homepage": "http://matura.pmgkk.com/",
   "dependencies": {
     "alt": "^0.18.6",
     "jquery": "^3.3.1",
@@ -15,7 +15,7 @@
     "uuid": "^3.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
